# utils-python

./: .gitignore  Makefile  pyproject.toml
src/bulk_photo_processor/: CHANGELOG.md  README.md  __init__.py  __main__.py  bulk_photo_mover.py  bulk_photo_processor.py  bulk_photo_renamer.py  cli.py  logger.py
src/crosshair_overlay/: __init__.py  __main__.py  crosshair_overlay.py
src/nfc_helper/: __init__.py  __main__.py
src/save_email_attachments/: CHANGELOG.md  README.md  attachment_downloader.py  cli.py  config_loader.py  imap_connector.py  imap_filters.py  logger.py
src/save_receipt_from_email/: README.md  __init__.py  __main__.py  _deprectaed_save_receipt_from_email.py  attachment_downloader.py  config.py  extractor.py  imap_connector.py  imap_filters.py  saver.py
src/stay_awake/: __init__.py  cli.py  stay_awake.py
tests/: test_nfc_basic.py
tools/: set_package.py
