[project]
name = "python"
version = "0.1.0"
description = "Various python scripts"
authors = [
    {name = "Vincent Villatte",email = "vincent@villatte.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "tqdm (>=4.66.4,<5.0.0)"
]

[tool.poetry]
name = "utility-scripts"
version = "0.1.0"
description = "Various Python utility scripts"
authors = ["Vincent Villatte <vincent@villatte.net>"]

packages = [
  { include = "crosshair_overlay", from = "src" },
  { include = "bulk_photo_processor", from = "src" },
  { include = "save_receipt_from_email", from = "src" },
  { include = "WhatsApp_toolkit", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.17.1"
pre-commit = "^4.2.0"

[tool.poetry.dependencies]
requests = "^2.31.0"
tqdm = "^4.66.4"

[tool.poetry.scripts]
bulk-photo-processor = "bulk_photo_processor.bulk_photo_processor:main"
crosshair-overlay = "crosshair_overlay.__main__:main"
save-receipts = "save_receipt_from_email.save_receipt_from_email:main"
wac2json = "WhatsApp_toolkit.save_as_json:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"