# toml file converted to PEP 621 standard
[project]
name = "utility-scripts"
version = "0.1.1+20260203"
description = "Various Python utility scripts"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }

authors = [
    { name = "Vincent Villatte", email = "vincent@villatte.net" }
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests>=2.32.4,<3.0.0",
    "tqdm>=4.67.2,<5.0.0"
]

[project.scripts]
bulk-photo-processor = "bulk_photo_processor.bulk_photo_processor:main"
crosshair-overlay = "crosshair_overlay.__main__:main"
save-email-attachments = "save_email_attachments.cli:cli"
wac2json = "WhatsApp_toolkit.save_as_json:main"

[tool.poetry]
package-mode = true

packages = [
  { include = "crosshair_overlay", from = "src" },
  { include = "bulk_photo_processor", from = "src" },
  { include = "save_email_attachments", from = "src" },
  { include = "WhatsApp_toolkit", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"
pytest = "^9.0.2"
black = "^26.1.0"
mypy = "^1.17.1"
pre-commit = "^4.2.0"
tomli-w = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"